# romnum

./: .coveragerc  LICENSE.txt  README.md  encoding_map.json  encoding_test_cases.json  pyproject.toml  requirements.txt  romnum.py  test_romnum.py
.github/workflows/: publish.yml  tests.yml
romnum/: __init__.py  __main__.py
tests/: encoding_test_cases.json  test_romnum.py
