[project]
name = "romnum"
version = "1.0.0"
description = "A bidirectional Roman numeral converter"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
keywords = ["roman", "numeral", "converter", "bidirectional"]

[project.urls]
homepage = "https://github.com/caleb531/romnum"
documentation = "https://github.com/caleb531/romnum#readme"
repository = "https://github.com/caleb531/romnum"
changelog = "https://github.com/caleb531/romnum/releases"

[project.scripts]
romnum = "romnum.__main__:main"

[tool.setuptools.package-data]
romnum = ["*.json"]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "romnum"
module-root = ""

[dependency-groups]
dev = [
    "nose2==0.11.0",
    "ruff>=0.12.0",
    "tomli==2.0.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

# Configuration for coverage.py (https://pypi.python.org/pypi/coverage)

[tool.coverage.run]
# Enable branch coverage
branch = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    "pragma: no cover",
    # Ignore non-runnable code
    "if __name__ == .__main__.:",
    "pass",
]

# Only check coverage for source files
include = ["romnum/*.py"]
